--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "expo": "~37.0.3",
+    "moment": "^2.25.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-elements": "^2.0.0",
     "react-native-web": "~0.11.7"
   },
